added description of txt file with credentials

--- a/1_MSI_introductory/1_1a_MSI_data_access_oidc.ipynb
+++ b/1_MSI_introductory/1_1a_MSI_data_access_oidc.ipynb
@@ -21,7 +21,11 @@
    "id": "af0582ac",
    "metadata": {},
    "source": [
-    "### Credentials"
+    "### Credentials\n",
+    "Username and password in a text file \"cdse_credentials.txt\" with the following structure:\n",
+    "\n",
+    "```username=your_cdse_username\n",
+    "password=your_cdse_password```"
    ]
   },
   {
