to save the file to the products folder

--- a/1_MSI_introductory/1_1a_MSI_data_access_oidc.ipynb
+++ b/1_MSI_introductory/1_1a_MSI_data_access_oidc.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "fa6d84a0",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "a9a5c79e",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "ddd73f9a",
    "metadata": {},
    "outputs": [
@@ -128,47 +128,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f8484df2",
+   "metadata": {},
+   "source": [
+    "### Add a filter based on an ROI"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "461e38b5",
+   "execution_count": 13,
+   "id": "598aa28b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Download complete: S2A_MSIL1C_20250117T110401_N0511_R094_T31UDQ_20250117T143914.SAFE.zip\n"
+      "e70a20f7-7c8e-485b-86a8-ac324fa6d66a S2B_MSIL1C_20250102T110349_N0511_R094_T31UDQ_20250102T143539.SAFE\n",
+      "306150e6-5d9d-40dc-bfde-7fdb1abba1e2 S2A_MSIL1C_20250104T105441_N0511_R051_T31UDQ_20250104T125200.SAFE\n",
+      "a4f5f471-eff8-4889-9b87-62015ad77384 S2B_MSIL1C_20250109T105329_N0511_R051_T31UDQ_20250109T124435.SAFE\n",
+      "12263b7f-78e6-4ea3-bbea-23c53eee7a28 S2B_MSIL1C_20250112T110329_N0511_R094_T31UDQ_20250112T131948.SAFE\n",
+      "c2698d12-939f-42d8-9e9e-8e42cc2c35a2 S2A_MSIL1C_20250114T105411_N0511_R051_T31UDQ_20250114T125009.SAFE\n"
      ]
     }
    ],
-   "source": [
-    "product_id = data[0][\"Id\"]\n",
-    "\n",
-    "download_url = f\"https://zipper.dataspace.copernicus.eu/odata/v1/Products({product_id})/$value\"\n",
-    "\n",
-    "with requests.get(download_url, headers=headers, stream=True) as r:\n",
-    "    r.raise_for_status()\n",
-    "    with open(f\"{data[0]['Name']}.zip\", \"wb\") as f:\n",
-    "        for chunk in r.iter_content(chunk_size=8192):\n",
-    "            f.write(chunk)\n",
-    "\n",
-    "print(\"✅ Download complete:\", data[0][\"Name\"] + \".zip\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f8484df2",
-   "metadata": {},
-   "source": [
-    "Add a filter based on an ROI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "598aa28b",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "bbox = \"POLYGON((2.25 48.80, 2.25 48.90, 2.40 48.90, 2.40 48.80, 2.25 48.80))\"\n",
     "\n",
@@ -179,6 +163,34 @@
     "\n",
     "for p in data:\n",
     "    print(p[\"Id\"], p[\"Name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "461e38b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Download complete: S2B_MSIL1C_20250102T110349_N0511_R094_T31UDQ_20250102T143539.SAFE.zip\n"
+     ]
+    }
+   ],
+   "source": [
+    "product_id = data[0][\"Id\"]\n",
+    "\n",
+    "download_url = f\"https://zipper.dataspace.copernicus.eu/odata/v1/Products({product_id})/$value\"\n",
+    "\n",
+    "with requests.get(download_url, headers=headers, stream=True) as r:\n",
+    "    r.raise_for_status()\n",
+    "    with open(f\"./products/{data[0]['Name']}.zip\", \"wb\") as f:\n",
+    "        for chunk in r.iter_content(chunk_size=8192):\n",
+    "            f.write(chunk)\n",
+    "\n",
+    "print(\"✅ Download complete:\", data[0][\"Name\"] + \".zip\")\n"
    ]
   },
   {
