added create products folder.

--- a/1_MSI_introductory/1_1a_MSI_data_access_oidc.ipynb
+++ b/1_MSI_introductory/1_1a_MSI_data_access_oidc.ipynb
@@ -195,11 +195,22 @@
     }
    ],
    "source": [
+    "import os\n",
+    "# create ./products if it does not exist\n",
+    "dir_path = \"./products/\"\n",
+    "if not os.path.isdir(dir_path):\n",
+    "    os.makedirs(dir_path)\n",
+    "    print(\"Directory products created successfully!\")\n",
+    "else:\n",
+    "    print(\"Directory products already exists!\")\n",
+    "    \n",
     "img_idx = 3\n",
     "product_id = data[img_idx][\"Id\"]\n",
     "\n",
     "filename = f\"{data[img_idx]['Name']}\"\n",
     "download_url = f\"https://zipper.dataspace.copernicus.eu/odata/v1/Products({product_id})/$value\"\n",
+    "\n",
+    "\n",
     "\n",
     "with requests.get(download_url, headers=headers, stream=True) as r:\n",
     "    r.raise_for_status()\n",
